--- a/templates/PoC.html
+++ b/templates/PoC.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en"">
+<html lang="en">
 <head>
   <title>David Controller PoC</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
-  <form>
+  <form id="package" action="{{ url_for('applySpeed', address=address, _external=True) }}" method="post">
     <input type="radio" name="address" value="128-1" checked>128-1<br>
     <input type="radio" name="address" value="128-2">128-2<br>
     <input type="radio" name="address" value="129-1">129-1<br>
     <input type="radio" name="address" value="129-2">129-2<br><br>
 
-    <input id="slider1" type="range" min="-127" max="127" step="1" value="0"
-           oninput="postValue('slider1','rangeValue1')"
-           onmouseup="snapToZero('slider1','rangeValue1')"/>
-    <input id="rangeValue1" size="10" type="text", value="0">
+    <input id="speed" type="range" min="-127" max="127" step="1" value="0" 
+          oninput="postValue('speed','feedback')"
+           onmouseup="snapToZero('speed','feedback')"/>
+    <input id="feedback" size="10" type="text" value="0">
+
+
   </form>
 
   <script>
@@ -22,6 +25,8 @@
         var s = document.getElementById(sliderID);
         var r = getControllerAddress();
         t.value = s.value.concat(' ' + r);
+        var f = document.getElementById("package")
+        post(f.action+r, s.value);
     }
     function snapToZero(sliderID, textbox) {
       var t = document.getElementById(textbox);
@@ -42,6 +47,15 @@
       }
       var parent = s.parentNode;
       parent.replaceChild(n, s);
+    }
+
+    function post(path, speed) 
+    {
+        var postSpeed = new XMLHttpRequest();
+        var speedParam = '{"speed":' + speed + '}';
+        postSpeed.open("POST", path, false);
+        postSpeed.setRequestHeader("Content-Type", "application/json");
+        postSpeed.send(speedParam);
     }
 
     function getControllerAddress()
