--- a/templates/PoC.html
+++ b/templates/PoC.html
@@ -5,18 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
-  <form id="package" action="{{ url_for('applySpeed', address=address, _external=True) }}" method="post">
-    <input type="radio" name="address" value="128-1" checked>128-1<br>
-    <input type="radio" name="address" value="128-2">128-2<br>
-    <input type="radio" name="address" value="129-1">129-1<br>
-    <input type="radio" name="address" value="129-2">129-2<br><br>
+  <form id="package" action="{{ url_for('applySpeed', controllerAddress='controllerAddress', motorAddress='motorAddress', _external=True) }}" method="post">
+    <input type="radio" name="address" value="128/1" checked>128-1<br>
+    <input type="radio" name="address" value="128/2">128-2<br>
+    <input type="radio" name="address" value="129/1">129-1<br>
+    <input type="radio" name="address" value="129/2">129-2<br><br>
 
-    <input id="speed" type="range" min="-127" max="127" step="1" value="0" 
-          oninput="postValue('speed','feedback')"
-           onmouseup="snapToZero('speed','feedback')"/>
+    <input id="speed" type="range" min="-127" max="127" step="1" value="0" oninput="postValue('speed','feedback')" onmouseup="snapToZero('speed','feedback')"/>
     <input id="feedback" size="10" type="text" value="0">
-
-
   </form>
 
   <script>
@@ -26,8 +22,9 @@
         var r = getControllerAddress();
         t.value = s.value.concat(' ' + r);
         var f = document.getElementById("package")
-        post(f.action+r, s.value);
+        post(f.action, r, s.value);
     }
+    
     function snapToZero(sliderID, textbox) {
       var t = document.getElementById(textbox);
       var s = document.getElementById(sliderID);
@@ -49,10 +46,12 @@
       parent.replaceChild(n, s);
     }
 
-    function post(path, speed) 
+    function post(path, cmAddress, speed) 
     {
         var postSpeed = new XMLHttpRequest();
         var speedParam = '{"speed":' + speed + '}';
+        var cmAddresses = cmAddress.split("/");
+        path = path.replace("controllerAddress", cmAddresses[0]).replace("motorAddress", cmAddresses[1]);
         postSpeed.open("POST", path, false);
         postSpeed.setRequestHeader("Content-Type", "application/json");
         postSpeed.send(speedParam);
